# CC-and-BR-in-Distributed-Learning

./: .gitignore  Readme.md  architectures.py  byzantine_crafting.py  cifar10_train.py  clients_code.py  compressor.py  datasets.py  mnist.py  mnist_train.py  momentum_bank.py  pyproject.toml  utils.py
old_version/: cifar10.py
scripts/: run_cifar10.sh  run_mnist.sh
src/: aggregator.py  clients.py  momentum_bank.py
src/train/: cifar10_train.py  mnist_train.py
